<resources>
    <string name="app_name">Technet</string>
    <string name="todo">TODO</string>
    <string name="this_is_a_news">Detail News 1</string>
    <string name="by_atik_shakur">BY ATIK</string>
    <string name="fortnite_coming_for_android_on_july_24">Fortnite coming for android on July 24</string>
    <string name="todoo">TODO</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="bookmark">Bookmark</string>
    <string name="settings">Settings</string>
    <string name="detailnews3">detailnews3</string>
    <string name="detailnews2">detailnews2</string>
    <string name="detailnews1">detailnews1</string>
    <string name="writter">writter</string>
    <string name="catagory">catagory</string>
    <string name="title">title</string>
    <string name="l_a_t_e_s_t">L A T E S T</string>
    <string name="t_r_e_n_d">T R E N D I N G</string>
    <string name="default_notification_channel_id">Technet</string>
    <string name="fcm_message">Technet</string>
    <string name="default_bk_txt">You haven\'t saved any articles yet</string>
    <string name="support">SUPPORT</string>
    <string name="about">ABOUT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today_s_picks">Today\'s Picks</string>
    <string name="we_picked_some_links_for_you"> We picked some links for you.</string>
    <string name="supercharge_your_command_line_experience_github_cli_is_now_in_beta">Supercharge your command line experience: Github CLI is now in beta</string>
    <string name="the_verge">The Verge</string>

</resources>
